Fix checkstyle issues and slight refactor